refactor: eliminate warnings, dead code, and upgrade to Java 21
- Removed dead code and commented-out blocks in repositories
- Cleaned up unused imports and variables across services
- Resolved compilation warnings and linter issues
- Upgraded project to Java 21 in pom.xml to match environment
- Verified with clean build (mvn clean compile)